--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <module>health_common</module>
         <module>health_interface</module>
         <module>health_backend</module>
-        <!--<module>health_mobile</module>-->
+        <module>health_mobile</module>
         <module>health_service_provider</module>
         <!--<module>spring_security_demo</module>-->
     </modules>
