--- a/health_common/pom.xml
+++ b/health_common/pom.xml
@@ -123,6 +123,12 @@
             <artifactId>tencentcloud-sdk-java</artifactId>
             <version>3.1.62</version><!-- 注：这里只是示例版本号，请获取并替换为 最新的版本号 -->
         </dependency>
+        <!--freemarker-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+            <version>2.3.7.RELEASE</version>
+        </dependency>
 
     </dependencies>
     <build>
