九 至 十一 章

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,6 @@
         <module>health_backend</module>
         <module>health_mobile</module>
         <module>health_service_provider</module>
-        <!--<module>spring_security_demo</module>-->
+        <module>spring_security_demo</module>
     </modules>
 </project>
