--- a/health_backend/pom.xml
+++ b/health_backend/pom.xml
@@ -76,6 +76,13 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.3.3</version>
         </dependency>
+
+        <!--spring security权限-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>2.3.7.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
