静态网页生成

--- a/health_service_provider/src/main/resources/application.yml
+++ b/health_service_provider/src/main/resources/application.yml
@@ -45,7 +45,8 @@ spring:
     # 模板路径
     template-loader-path: classpath:/templates/
 #freemarker文件输出地址
-out_put_path: D:/IdeaProjects9/health_parent/health_mobile/src/main/resources/static/pages
+out_put_path:  C:\Users\86151\Desktop\health_parent1/health_mobile/src/main/resources/static/pages
+
 
 mybatis:
   # 指定全局配置文件位置
